--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/slider": "^5.1.1",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/drawer": "^7.5.7",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.17",
+    "axios": "^1.11.0",
     "expo": "~53.0.20",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.1.5",
@@ -42,7 +44,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "react-native-wifi-reborn": "^4.13.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
